--- a/template/about.html
+++ b/template/about.html
@@ -11,21 +11,21 @@
     <div class="text-center col-10 mx-auto" id="about">
         <h2 class="text-center display-4 fw-bold">About us</h2>
         <img src="{% static 'img/about.jpg' %}" class="col-12" alt="About">
-        <p class="text-justify mt-3"> 
+        <p class="text-justify mt-3 fs-5"> 
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam laboriosam illo dolore recusandae enim dolorum molestiae sequi sint odio voluptates animi aut, obcaecati numquam, nulla dolor, alias facilis. Officiis nihil velit, quibusdam mollitia doloribus doloremque, rerum dicta tempore facere qui natus maiores aliquid fuga. Iste alias ullam optio veniam totam laborum, velit suscipit maxime adipisci eius quaerat, esse qui consequatur quisquam excepturi, pariatur magni dolorem aliquam nam repellendus corporis neque?
         </p>
-        <ul class="text-start">
+        <ul class="text-start fs-5">
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, amet.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, amet.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, amet.</li>
         </ul>
-        <p class="text-justify">
+        <p class="text-justify fs-5">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis tenetur illo perferendis labore nesciunt deleniti omnis modi aliquid, illum odio distinctio ducimus dolorem corrupti. Deleniti illum excepturi non dignissimos? Ea doloribus numquam in fuga velit dolore, molestiae amet est pariatur culpa alias recusandae iste excepturi quo eveniet similique sed?
         </p>
     </div>
     <div id="contact" class="col-10 mx-auto px-5 mt-5 pt-3 pb-5">
         <h3 class="display-4 fw-bold">Contact Us</h3>
-        <p class="ms-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, eaque?</p>
+        <p class="ms-1 fs-4">We welcome your suggestions and questions.</p>
         <div class="row justify-content-center mt-5">
             <div class="col-md-4 col-11">
                 <div class="row justify-content-center">
