--- a/template/home.html
+++ b/template/home.html
@@ -47,15 +47,15 @@
                 <input type="email" name="email" class="form-control" required>
             </div>
             <div class="col-md-6 col-12 my-2">
-                <label for="">Marks in Matricualtion:</label>
+                <label for="">Marks in Matricualtion(in %age):</label>
                 <input type="text" name="marks10" class="form-control" required>
             </div>
             <div class="col-md-6 col-12 my-2">
-                <label for="">Marks in Intermediate:</label>
+                <label for="">Marks in Intermediate(in %age):</label>
                 <input type="text" name="marks12" class="form-control" required>
             </div>
             <div class="col-md-6 col-12 my-2">
-                <label for="">Marks in Enterance Exam:</label>
+                <label for="">Marks in Enterance Exam(in %age):</label>
                 <input type="text" name="marksent" class="form-control" required>
             </div>
             <div class="col-md-6 col-12 my-2">
